# full-way-vibe-coding

./: .gitignore  00_ANALISE_ESTRATEGICA.md  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  README.md  SKILL.md  filosofia.md  pyproject.toml
.review/: canonical-001-f0.5.md  canonical-001-f0.md  canonical-001-f1.md  canonical-001-f2.md  canonical-001-f3.5.md  canonical-001-f3.md  canonical-001-f4.md  canonical-001-f5.md  canonical-001-f6.md  canonical-001-f7.md  canonical-001-f8.md  canonical-001-f9.md  progress-reconciliacao.md  w0-fundadores.md  w1a-lint.md
checklists/: mvp.md  pre-implementacao.md  pre-merge.md  qualidade-bmad.md  qualidade-briefing.md  qualidade-plano.md  qualidade-spec.md
domains/: hibrido.md  playbook.md  processo.md  software.md
fases/: 00_5_BMAD.md  00_RECEPCAO.md  01_BRIEFING.md  02_SPEC.md  03_5_CONSTITUICAO.md  03_CLARIFY.md  04_PLAN.md  05_TASKS.md  06_ANALYZE.md  07_IMPLEMENT.md  08_TEST.md  09_QUICKSTART.md  10_REVIEW.md  11_MERGE.md  12_RETROSPECTIVE.md
governanca/: adr-global.md  metricas.md  versioning.md
governanca/adrs/: ADR-001-v1.1-dual-domain.md  ADR-002-stack-harness.md  ADR-003-estrategia-publicacao.md  ADR-007-modo-execucao-c1-c2-em-fase-0.md  ADR-index.md  (+2 more)
harness/: README.md  rollout.md
protocolos/: agentes-e-automacoes.md  antialucinacao.md  brownfield.md  decisao-mvp.md  erros-e-retry.md  perguntas-padrao.md  travamento.md
specs/m1-lint/: analyze.md  (+11 more)
templates/: adr.md  analise.md  bmad.md  briefing.md  clarify.md  constituicao.md  decision_log.md  plano.md  quickstart.md  retrospective.md  review.md  spec.md  tasks.md
(+81 files in other folders)
